tests/baselines/reference/typeSatisfaction_js.errors.txt
error TS5102: Option 'out' has been removed. Please remove it from your configuration.
  Use 'outFile' instead.
/src/a.js(1,29): error TS8037: Type satisfaction expressions can only be used in TypeScript files.


!!! error TS5102: Option 'out' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use 'outFile' instead.
==== /src/a.js (1 errors) ====
    var v = undefined satisfies 1;
                                ~
!!! error TS8037: Type satisfaction expressions can only be used in TypeScript files.
    